fix alignment of 'ver mais' anchor

--- a/src/components/PatrimonyItem/PatrimonyItem.module.scss
+++ b/src/components/PatrimonyItem/PatrimonyItem.module.scss
@@ -23,6 +23,8 @@
     font-size: 14px;
     text-transform: uppercase;
     text-decoration: none;
+
+    margin-top: auto;
   }
 }
 
